# c

./: ArraysAndNestedLoops.c  BuildingABasicCalculator.c  BuildingABetterCalculator.c  BuildingAGuessingGame.c  BuildingAMadLibsGame.c  CMakeLists.txt  Comments.c  Constants.c  Datatypes.c  DereferencingPointers.c  ForLoops.c  Functions.c  GettingUserInput.c  IfStatement.c  MemoryAddresses.c  Pointers.c  Printf.c  ReadingFiles.c  ReturnStatement.c  Structs.c  Variables.c  WhileLoops.c  WorkingWithNumbers.c  WritingFiles.c  array.c  dataBase.c  fileForRead.txt  forAndWhile.c  function.c  glfw.c  if_Statement.c  inputUser.c  pointer.c  query.c  stract_pointer_function.c  string_functions.c  struct_define_header_file.c  switch.c  work_1.c
Applications/: DigitalClock.c  GreatValue.c  StudentRecordManagementSystem.c  record.txt
GLFW/: Glfw.c
HackingTools/: WinSock2.c  client.c  server.c
WEBSCRAPER/: getDataFromGithub.c
